--- a/_estoque_/pom.xml
+++ b/_estoque_/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>br.com.mercadinho</groupId>
-    <artifactId>estoque</artifactId>
+    <artifactId>_estoque_</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
@@ -31,9 +31,6 @@
         </dependency>
 
     </dependencies>
-
-
-
 
     <properties>
         <maven.compiler.source>19</maven.compiler.source>
